# acmp

./: CMakeLists.txt  README.md
0001/: 0001.cpp  task.md
0002/: 0002.cpp  task.md
0003/: 0003.cpp  INPUT.TXT  OUTPUT.TXT  task.md
0004/: 0004.cpp  OUTPUT.TXT  task.md
0005/: 0005.cpp  task.md
0006/: 0006.cpp  task.md
0007/: 0007.cpp  INPUT.TXT  task.md
0008/: 0008.cpp  task.md
0009/: 0009.cpp  task.md
0010/: 0010.cpp  OUTPUT.TXT  task.md
0012/: 0012.cpp  task.md
0033/: 0033.cpp  task.md
0108/: 0108.cpp  task.md
0195/: 0195.cpp  task.md
0903/: 0903.cpp  task.md
1038/: 1038.cpp  task.md
1109/: 1109.cpp  task.md
1110/: 1110.cpp  task.md
1111/: 1111.cpp  task.md
1112/: 1112.cpp  task.md
1113/: 1113.cpp  task.md
