cmake_minimum_required(VERSION 3.14)
project(algorithmic_foundation)

set(CMAKE_CXX_STANDARD 14)

add_executable(0001 0001/0001.cpp)
add_executable(0002 0002/0002.cpp)
add_executable(0003 0003/0003.cpp)
add_executable(0004 0004/0004.cpp)
add_executable(0005 0005/0005.cpp)
add_executable(0006 0006/0006.cpp)
add_executable(0007 0007/0007.cpp)
add_executable(0008 0008/0008.cpp)
add_executable(0009 0009/0009.cpp)
add_executable(0010 0010/0010.cpp)

add_executable(0012 0012/0012.cpp)

add_executable(0108 0195/0195.cpp)

add_executable(0903 0903/0903.cpp)

add_executable(1109 1109/1109.cpp)

add_executable(1110 1110/1110.cpp)

add_executable(1111 1111/1111.cpp)

add_executable(1112 1112/1112.cpp)